# gomp

./: .gitignore  Cargo.toml  README.md
examples/: complex.rs
examples/complex/: main.rs
src/: builder.rs  error.rs  lib.rs
src/application/: config.rs  mod.rs
src/ecs/: mod.rs  scene.rs
src/ecs/component/: body.rs  mesh.rs  mod.rs  transform.rs
src/ecs/entity/: friendly.rs  mod.rs
src/ecs/scene/: friendly.rs  mod.rs
src/renderer/: buffer.rs  mod.rs  render.rs  vertex.rs
src/renderer/shaders/: fragment.rs  fragment.wgsl  mod.rs  vertex.rs  vertex.wgsl
src/state/: mod.rs
