[package]
name = "gomp"
version = "0.1.0"
edition = "2018"
resolver = "2" # Needed for WGPU (for some reason)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
wgpu = "0.11"
pollster = "0.2"

