[package]
name = "gomp"
version = "0.1.0"
edition = "2018"
resolver = "2" # Needed for WGPU (for some reason)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
wgpu = "0.11"
pollster = "0.2"
futures = "0.3.17"
log = "0.4.14"
thiserror = "1.0.30"

[dev-dependencies]
fern = { version = "0.6.0", features = [ "colored" ] }
chrono = "0.4.19"

